<resources>
    <string name="app_name">冬奥小助</string>
    <string name="slogan">激情冬奥，你我共迎！</string>
    <string name="copyright_information">2019 © Esri杯中国大学生GIS软件开发竞赛</string>
    <string name="hint_usename">邮箱:</string>
    <string name="hint_password">密码:</string>
    <string name="sign_in">登录</string>
    <string name="sign_up">注册</string>
    <string name="forget_password">忘记密码？</string>
    <string name="register_email_name">注册密码</string>
    <string name="register_page_name">注册</string>
    <string name="register_username">昵称</string>
    <string name="register_email">邮箱</string>
    <string name="register_type_user">普通用户</string>
    <string name="register_type_volunteer">志愿者</string>
    <string name="register_type_athle">运动员</string>
    <string name="register_password">密码</string>
    <string name="register_confirm_password">确认密码</string>
    <string name="forget_page_name">找回密码</string>
    <string name="forget_usename">请输入您的账号</string>
    <string name="forget_email">请输入您绑定的邮箱</string>
    <string name="forget_indentify_code">验证码</string>
    <string name="forget_get_identify_code">获取验证码</string>
    <string name="forget_new_password">请设置新密码</string>
    <string name="forget_confirm_password">确认新密码</string>
    <string name="forget_post">提交</string>
    <string name="focus_name">选择您的关注</string>
    <string name="focus_start">开始</string>
    <string name="focus_start1">开始1</string>
    <string name="focus_start2">开始2</string>
    <string name="focus_choose_event">选择您关注的比赛项目(最多选择十个)</string>
    <string name="focus_choose_athlete">选择您关注的运动员(最多选择十人)</string>
    <string name="focus_athlete1">杨扬</string>
    <string name="focus_athlete2">张虹</string>
    <string name="focus_athlete3">李坚柔</string>
    <string name="focus_athlete4">王濛</string>
    <string name="focus_athlete5">申雪/赵宏博</string>
    <string name="focus_athlete6">浅田真央</string>
    <string name="focus_athlete7">普鲁申科</string>
    <string name="focus_athlete8">安贤洙</string>
    <string name="focus_athlete9">奥拉·比约达伦</string>
    <string name="focus_athlete10">劳琳-威廉姆斯</string>
    <string name="focus_athlete11">肖恩-怀特</string>
    <string name="focus_athlete12">佩希施泰因</string>
    <string name="focus_athlete13">韩晓鹏</string>
    <string name="focus_athlete14">金妍儿</string>
    <string name="focus_ski_jumping">跳台滑雪</string>
    <string name="focus_skeleton">俯式冰橇</string>
    <string name="focus_figure_skating">花样滑冰</string>
    <string name="focus_luge">无舵雪橇</string>
    <string name="focus_bobsleiqn">有舵雪橇</string>
    <string name="focus_alpine_skiing">高山滑雪</string>
    <string name="focus_short_track">短道速滑</string>
    <string name="focus_speed_skating">速度滑冰</string>
    <string name="focus_free_styleing">自由式滑雪</string>
    <string name="focus_cross_skating">越野滑雪</string>
    <string name="focus_nordic_combined">北欧两项</string>
    <string name="focus_biathlon">现代冬季两项</string>
    <string name="focus_snowboarding">单板滑雪</string>
    <string name="focus_ice_hockey">冰球</string>
    <string name="focus_curling">冰壶</string>
    <string name="focus_confirm_choice">确认选择</string>
    <string name="focus_skip_this">跳过</string>
    <string name="focus_cancle">取消</string>
    <string name="focus_no_choice">您还未选择任何关注！</string>
    <string name="main_man_ice_hockey">国家体育馆（男子冰球）、</string>
    <string name="main_woman_ice_hockey">五棵松体育中心（女子冰球）</string>
    <string name="main_hold_people_10000_5_5">5000坐席+5000站席</string>
    <string name="main_hold_people_8500">5000坐席+3500站席</string>
    <string name="main_hold_people_10000_2_8">2000坐席+8000站席</string>
    <string name="main_hold_people_7500">5000坐席+2500站席</string>
    <string name="main_national_skating">国家速滑馆，是北京冬奥会唯一新建冰上竞赛场馆。 [1]  2016年动工建设，作为2022年中国冬奥会的场馆之一，赛后将对北京市民开放，既为运动员提供训练场地也满足北京市民冬季运动的需求。2016年3月，国家速滑馆效果图首次亮相，从效果图上看速滑馆形似“蚕蛹” [2]  。2017年4月，国家速滑馆设计方案亮相，它有一个晶莹美丽的昵称——“冰丝带”。与此同时，北京市规划国土委相关负责人也介绍了国家速滑馆设计方案的酝酿、征集过程 [3]  。2018年6月底，国家速滑馆完成全部地下结构施工，预计2018年9月完成主体结构。2019完工。</string>
    <string name="main_water_squ">国家游泳中心又称“水立方”(Water Cube)位于北京奥林匹克公园内，是北京为2008年夏季奥运会修建的主游泳馆，也是2008年北京奥运会标志性建筑物之一。它的设计方案，是经全球设计竞赛产生的“水的立方”([H2O]3)方案。其与国家体育场(俗称鸟巢)分列于北京城市中轴线北端的两侧，共同形成相对完整的北京历史文化名城形象。国家游泳中心规划建设用地62950平方米，总建筑面积65000-80000平方米，其中地下部分的建筑面积不少于15000平方米,长宽高分别为 177m ×177m ×30m。</string>
    <string name="main_national_stadium">国家体育馆位于北京奥林匹克公园中心区的南部，总建筑面积为80890平方米，是奥林匹克中心区的标志性建筑之一 [1]  。国家体育馆俗称折扇，作为北京奥运会三大主场馆之一。国家体育馆该工程主要由体育馆主体建筑和一个与之紧密相邻的热身馆以及相应的室外环境组成。 [2]  该场馆内设有固定座位数18000个及临时座位数2000个。在奥运会期间，赛时功能为竞技体操、蹦床、手球的场馆，在残奥会期间的用途则是轮椅篮球的比赛场馆。奥运会后，国家体育馆作为北京市一流体育设施，成为集体体育竞赛、文化娱乐于一体，提供多功能服务给市民活动中心。</string>
    <string name="main_wukesong">独一无二的凯迪拉克中心是长安商业中心开发区的焦点建筑，它已经在奥运期间举办了多场世界级的赛事，迎接了多名世界级的体育明星。2008年被北京政府定为八个体育产业聚集地之一。 场馆座落在长安街和西四环路的交汇处，可容纳20,000人。得天独厚的条件将使它成为在北京享受顶级娱乐活动的场所。</string>
    <string name="main_capital_stadium">首都体育馆修建于1968年，建筑面积约5.3万平方米，属于综合性、多功能的体育馆，是北京重要的体育文化活动场所之一。在建成后的38年时间里，承担了众多的国际、国内体育比赛和训练，以及大型文艺演出任务。为满足2008年奥运会排球比赛和训练的需要，首都体育馆进行大规模改建工程。 首都体育馆场馆改造完成后建筑面积增至约5.46万平方米，满足国际奥委会及国际单项体育组织的功能需求。改造工程主要包括比赛馆、综合训练馆和赛时附属用房，扩建部分主要是售票大厅和四个物品寄存处，另外还要对馆区环境进行改造和修缮。改建后的首都体育馆不仅可以满足2008年奥运会排球项目的训练和比赛，还能满足赛后其它大型活动的要求。</string>
    <string name="main_ocean_cross_country">北欧中心跳台滑雪场规划位于河北省张家口市崇礼县东部， 紧邻明长城遗址，雪道距离长城遗址最近处只有十几米，可作为跳台滑雪赛事场地。</string>
    <string name="main_national_alpine_skating">国家高山滑雪中心位于北京延庆区西北部，将作为高山滑雪比赛场地，距离奥运村8千米，行车10分钟，赛场提供观众坐席5000个和站席3500个。国家高山滑雪中心依托小海坨山天然山形将规划建设7条雪道，全长21公里，落差约800米。</string>
    <string name="main_national_sleigh_center">国家雪车雪橇中心位于北京延庆区西北部，将作为雪车、雪橇比赛场地，距离奥运村1千米，行车5分钟，赛场提供观众坐席2000个和站席8000个。国家雪车雪橇中心赛道全长1.9公里，垂直落差127米，设置16个弯道。</string>
    <string name="main_yundingshang">云顶滑雪公园场地位于河北省张家口市崇礼县境内，地处太行山和燕山交会的大马群山之中，这里年平均气温只有3.3℃，积雪时间长达150天，2022年冬奥会将作为单板、自由式滑雪比赛场地。</string>
    <string name="main_baithlon_winter">冬季两项中心规划位于河北省张家口市崇礼县山区，该地区空气清新、空间广阔、自然环境好，而且几个项目安排场地集中，完全具备建设相关场馆和设施、举办冬奥会冬季两项比赛的条件。</string>
    <string name="main_europe_platform">北欧中心跳台滑雪场规划位于河北省张家口市崇礼县东部， 紧邻明长城遗址，雪道距离长城遗址最近处只有十几米，可作为跳台滑雪赛事场地。</string>
    <string name="main_bird_nest">国家体育场（鸟巢）位于北京奥林匹克公园中心区南部，为2008年北京奥运会的主体育场。工程总占地面积21公顷，场内观众坐席约为91000个。举行了奥运会、残奥会开闭幕式、田径比赛及足球比赛决赛。奥运会后成为北京市民参与体育活动及享受体育娱乐的大型专业场所，并成为地标性的体育建筑和奥运遗产。体育场由雅克·赫尔佐格、德梅隆、艾未未以及李兴刚等设计，由北京城建集团负责施工。体育场的形态如同孕育生命的“巢”和摇篮，寄托着人类对未来的希望。设计者们对这个场馆没有做任何多余的处理，把结构暴露在外，因而自然形成了建筑的外观。2003年12月24日开工建设，2008年3月完工，总造价22.67亿元 [1]  。作为国家标志性建筑，2008年奥运会主体育场，国家体育场结构特点十分显著。体育场为特级体育建筑，大型体育场馆。主体结构设计使用年限100年，耐火等级为一级，抗震设防烈度8度，地下工程防水等级1级。2014年4月中国当代十大建筑评审委员会从中国1000多座地标建筑中，综合年代、规模、艺术性和影响力四项指标，初评出二十个建筑。最终由此产生十大当代建筑。北京鸟巢——国家体育场为初评入围建筑之一 [2-3]  。作为北京2022年冬奥会冰上项目场馆，国家体育场改造工程将于2020年初开工。</string>
    <string name="main_beijing_chaoyang">北京市朝阳区</string>
    <string name="main_beijing_haidin">北京市海淀区</string>
    <string name="main_beijing_yanqing">北京市延庆区</string>
    <string name="main_zhangjiakou_chongli">张家口市崇礼区</string>
    <string name="main_bobsleiqn_info">有舵雪橇，起源于瑞士。由无舵雪橇发展而来。有舵雪车第一届冬季奥运会中即被列为正式比赛项目。雪车用金属制成，形如小舟，车首覆有流线型罩，因此也得名“雪地之舟”。车底前部是一对舵板；上与方向盘相接，车底后部为一对固定平行滑板。车尾装有制动器。现今冬奥会比赛项目雪车是原来的有舵雪橇与平底雪橇（无舵雪橇）项目。原来的国际有舵雪橇与平底雪橇联合会，亦改称为国际雪车联合会。冬奥会设双人座和四人座（1924年列入）两个比赛项目，仅限男子参加。比赛时每队下滑4次，以4次比赛的总时间计算名次，时间少者为胜。</string>
    <string name="main_luge_info">无舵雪橇，也称平底雪橇、运动雪橇或短雪橇。雪橇运动项目之一。一种仰面躺在雪橇上，双脚在前，通过变换身体姿势来操纵雪橇高速回转滑降的运动。雪橇为木制，底面有一对平行的金属滑板。滑板不得装置能操纵滑板的舵和制动器。男、女单人项目比赛每队限报3人，每名运动员可滑行4次，以4次滑降时间总和计算名次，少者为胜。双人项目比赛时每队不得超过两名运动员，每名运动员可滑行两次，以两次滑降时间总和评定名次，少者列前。</string>
    <string name="main_skeleton_info">在冬季奥运中设立男子和女子的个人赛事。俯式冰橇于冬季奥运中四次列入正式比赛项目。1928年瑞士圣莫里茨奥运会上进行过比赛，分为男、女各一项比赛。20年后，圣莫里茨再度举办冬奥会，把钢架雪车列入比赛。钢架雪车项目危险性较高，1948年冬奥会后被取消。2002年盐湖城冬奥会，再度成为冬奥会比赛项目。</string>
    <string name="main_ski_jumping_info">跳台滑雪简称“跳雪”。就是运动员脚着特制的滑雪板，沿着跳台的倾斜助滑道下滑。借助速度和弹跳力，使身体跃入空中，使整个身体在空中飞行约4-5秒钟后，落在山坡上。1972年首届世界跳台滑雪锦标赛在南斯拉夫举行。该项目从1924年第一届冬奥会即被列为比赛项目。根据国际滑雪联合会规定，在冬季奥运会及世界滑雪锦标赛的跳雪比赛中，设有70米级和90米级台的两个跳雪项目。从1964年第九届冬奥会开始统一跳台级别，才分别规定为上述的70米和90米两种。这并不单指跳台高度，还包括跳台助滑道的坡度即35-40度，以及长度80-100米。</string>
    <string name="main_figure_skating_info">花样滑冰（Figure Skating）是冬季奥运会的正式比赛项目。花样滑冰是冬季奥运会的正式比赛项目。运动员穿着脚底装有冰刀的冰鞋、靠自身力量在冰上滑行，表演预先以技术动作为基础编排的节目，由裁判组评估打分、排出名次。</string>
    <string name="main_alpine_info">高山滑雪，起源于阿尔卑斯山地域，又称“阿尔卑斯滑雪”或“山地滑雪”。奥运会高山滑雪设10小项，男女各五项。男子项目设：滑降、回转、大回转、超级大回转、全能（滑降/回转）；女子项目设：滑降、回转、大回转、超级大回转、全能（滑降/回转）。该项运动将速度与技巧完美地结合在一起，运动员在滑行过程中左右盘旋，将健美与优雅融于一体，粗犷中不失儒雅，所以，一直深受广大观众的欢迎。</string>
    <string name="main_short_track_info">短道速滑是冬季奥运会项目，全称短跑道速度滑冰，比赛场地的大小为30×60米，跑道每圈的长度为111.12米，短道速滑19世纪80年代起源于加拿大，当时加拿大的一些速度滑冰爱好者常到室内冰球场上练习，随之产生了室内速度滑冰的比赛，20世纪初，这项比赛亦逐渐在欧洲和美洲国家广泛开展。1988年短道速滑在卡尔加里冬奥会被首次列为冬奥会表演项目，1992年阿尔贝维尔冬奥会才成为正式比赛项目</string>
    <string name="main_speed_skating_info">速度滑冰（speed skating）是一项在400米赛道上较量滑行速度的冰上体育运动，从事速滑运动有助于增进身心健康，促进人体新陈代谢，提高心肺功能，增强防寒能力，培养坚毅顽强的意志品质。400米赛道分内道和外道，2人1组进行比赛，每滑1圈到达换道区时，内道起跑的运动员须换到外道滑跑，而外道运动员则须换到内道。速滑项目按照国际滑冰联盟的规则规定，分短距离﹑中距离﹑长距离和全能 4种，每种均分男女组。500米。1000米。1500米。</string>
    <string name="main_free_styleing_info">自由式滑雪于1960年代在美国诞生，当时的美国正处于一个变革的时期，人们渴望自由的心理促使这项全新的刺激的滑雪项目出现在人们面前。此项目最初只是将高山滑雪和杂技集于一身，经过最近几十年的发展，变成了今天的样子。</string>
    <string name="main_cross_skating_info">越野滑雪借助滑雪用具，运用登山 、滑降、转弯、滑行等基本技术，滑行于山丘雪原的运动项目。起源于北欧，又称北欧滑雪，是世界运动史上最古老的运动项目之一。1924年首次列入冬季奥运会比赛项目。比赛有男子15千米、30千米、50千米单项和团体接力比赛；女子有5千米、10千米、20千米单项及团体接力赛 。比赛线路是上坡 、下坡和平地各约占1/3。为有利于发挥速度，应避免坡度过长、过陡和急转弯地段。运动员按赛前抽签决定的顺序佩带号码布，着经裁判检查认可并打有标记的滑雪板</string>
    <string name="main_nordic_combined_info">起源于北欧，由越野滑雪和跳台滑雪组成，在挪威、瑞典流传很长时间，成为北欧的传统项目，故又称北欧全能。1883年被列入霍尔门科伦滑雪大奖赛，20世纪初开始向世界推广。</string>
    <string name="main_biathlon_info">现代冬季两项是雪上运动项目之一，由越野滑雪和射击两种特点不同的相结合的竞赛项目结合在一起进行的运动，要求运动员既要有由动转静的能力，又要有由静转动的能力。冬季两项也是冬奥会的正式项目之一。要求运动员身背专用小口径步枪，每滑行一段距离进行一次射击，最先到达终点者即为优胜。 它起源于挪威，与人们在冬季狩猎活动有关，是一种滑雪加射击的比赛。</string>
    <string name="main_snowboarding_info">单板滑雪(Snowboarding)（又称滑板滑雪）源于20世纪60年代中期的美国，其产生与冲浪运动有关。舍曼-波潘1965年把两个滑雪板绑在一起，偶然中就创造了两脚踩踏在一整块板上的新“滑雪板”，单板滑雪又称冬季的冲浪运动，单板滑雪选手用一个滑雪板而不是一双滑雪板，利用身体和双脚来控制方向。</string>
    <string name="main_ice_hockey_info">冰球(ice hockey )，亦称“冰上曲棍球”。冰球运动是多变的滑冰技艺和敏捷娴熟的曲棍球技艺相结合，对抗性较强的集体冰上运动 [1]  项目之一，也是冬季奥运会正式比赛项目。运动员穿着冰鞋，手拿冰杆滑行拚抢击球。球一般用硬橡胶制成，厚2,54厘米，直径7.62厘米，球重为156-170克。比赛时每队上场六人，前锋三人，后卫两人，守门员一人。运动员用冰杆将球击入对方球门，以多者为胜</string>
    <string name="main_curling_info">冰壶（Curling），又称掷冰壶、冰上溜石，是以队为单位在冰上进行的一种投掷性竞赛项目，冬奥会比赛项目，并设有冰壶世锦赛。设男女2个小项，每队为四人。冰壶为圆壶状，由不含云母的苏格兰天然花岗岩制成，且世界上所有的制造优质冰壶用的天然花岗岩均产自苏格兰近海的一个小岛，也只有苏格兰人掌握着制作世界顶尖水平冰壶的技术。冰壶周长约为91.44厘米，高（从壶的底部到顶部）11.43厘米，重量（包括壶柄和壶栓）最大为19.96公斤。刷冰是为了减小冰壶与冰面间摩擦。有人把冰壶称作“冰上国际象棋”，这一比喻很好地诠释了冰壶的神秘与高雅。</string>
    <string name="channel_critical">Critical events</string>
    <string name="channel_importance">Importance events</string>
    <string name="channel_default">Default events</string>
    <string name="channel_low">Low events</string>
    <string name="channel_media">Media events</string>
    <string name="notify_title">您关注的比赛即将开始！</string>
    <string name="notify_dialogs_title">提示</string>
    <string name="notify_get_permission">冬奥小助 需要申请通知栏权限，以便向您推送你关注的运动员和项目相关信息，请前往设置页面中授予权限。</string>
    <string name="notify_contirm">前往设置</string>
    <string name="notify_cancle">取消</string>
    <string name="indoor_page_name">室内地图</string>
    <string name="central_name">个人中心</string>
    <string name="central_medal_standings">奖牌榜</string>
    <string name="central_related_linking">相关链接</string>
    <string name="central_games_schedule">赛程安排</string>
    <string name="central_volunteer">寻找志愿者</string>
    <string name="central_navigation">路线规划</string>
    <string name="central_3d_scene">三维场馆</string>
    <string name="central_my_attention">我的关注</string>
    <string name="central_escape_route">应急疏散</string>
    <string name="schedule_date_04">2月4号</string>
    <string name="schedule_date_05">2月5号</string>
    <string name="schedule_date_06">2月6号</string>
    <string name="schedule_date_07">2月7号</string>
    <string name="schedule_date_08">2月8号</string>
    <string name="schedule_date_09">2月9号</string>
    <string name="schedule_date_10">2月10号</string>
    <string name="schedule_date_11">2月11号</string>
    <string name="schedule_date_12">2月12号</string>
    <string name="schedule_date_13">2月13号</string>
    <string name="schedule_date_14">2月14号</string>
</resources>