<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".view.ChooseAttentionActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">
        <TextView
            android:id="@+id/attention_iv_title"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="start|center_vertical"
            android:text="@string/notify_dialogs_title"
            android:layout_alignParentStart="true"
            android:textColor="#000000"
            android:textSize="22sp" />
    </RelativeLayout>



    <TextView
        android:layout_marginTop="15dp"
        android:id="@+id/attention_iv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="top|left"
        android:text="@string/notify_get_permission"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:lineSpacingExtra="8dp"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <net.qiujuer.genius.ui.widget.Button
            android:id="@+id/attention_btn_confirm"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/opinion_text_color"
            android:text="@string/notify_contirm"
            android:textSize="16sp"
            android:textColor="#ffffff"
            app:gTouchCornerRadius="15dp"
            app:gTouchEffect="ripple" />

        <net.qiujuer.genius.ui.widget.Button
            android:id="@+id/attention_btn_cancle"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#5c5c8a"
            android:text="@string/notify_cancle"
            android:textSize="16sp"
            android:textColor="#ffffff"
            app:gTouchCornerRadius="15dp"
            app:gTouchEffect="ripple" />

    </LinearLayout>




</LinearLayout>